--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,15 +24,15 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
-              Departamentos
+              Categorias
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action1</a></li>
-              <li><a class="dropdown-item" href="#">Action2</a></li>
+              <li><a class="dropdown-item" href="#">Classicos</a></li>
+              <li><a class="dropdown-item" href="#">Usados</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
-              <li><a class="dropdown-item" href="#">Action3</a></li>
+              <li><a class="dropdown-item" href="#">Motos</a></li>
             </ul>
           </li>
         </ul>
@@ -57,7 +57,7 @@
       <div class="carousel-item active">
         <img width="100%" height="700px" alt="" src="img/carro1.jpeg">
         <div class="carousel-caption d-none d-md-block">
-          <p>Sobre este destaque img fluid</p>
+          <p>Sobre este destaque </p>
         </div>
       </div>
       <div class="carousel-item">
