--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,89 +1,99 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org" lang="pr-BR">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <title>Seus Dados</title>
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <title>Seus Dados</title>
 
-    <link href="css/signin.css" rel="stylesheet">
-  </head>
-  <body class="text-center">
-    
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+
+  <link href="css/signin.css" rel="stylesheet">
+</head>
+
+<body class="text-center">
+
   <main class="form-signin">
-  <form th:action="@{/processa_registro}" method="post" th:object="${user}">
-   
-    <h1 class="h3 mb-3 fw-normal">Register</h1>
+    <form th:action="@{/processa_registro}" method="post" th:object="${user}">
 
-    <div class="form-floating">
-      <input type="email" class="form-control" id="floatingInput" th:field = "*{email}" required maxlength="35">
-      <label for="floatingInput">Seu Email</label>
-    </div>
-    <div class="checkbox mb-3">
-    </div>
-    <div class="form-floating">
-        <input type="text" class="form-control" id="floatingInput" th:field = "*{name}" required maxlength="25">
+      <h1 class="h3 mb-3 fw-normal">Register</h1>
+
+      <div class="form-floating">
+        <input type="email" class="form-control" id="floatingInput" th:field="*{email}" required maxlength="35">
+        <label for="floatingInput">Seu Email</label>
+      </div>
+      <div class="checkbox mb-3">
+      </div>
+      <div class="form-floating">
+        <input type="text" class="form-control" id="floatingInput" th:field="*{name}" required maxlength="25">
         <label for="floatingInput">Nome Completo</label>
       </div>
       <div class="checkbox mb-3">
       </div>
       <div class="form-floating">
-        <input type="text" class="form-control" id="floatingInput" th:field = "*{endereco}" required maxlength="25">
+        <input type="text" class="form-control" id="floatingInput" th:field="*{endereco}" required maxlength="25">
         <label for="floatingInput">Endereço</label>
       </div>
       <div class="checkbox mb-3">
       </div>
 
 
-    <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInput" th:field = "*{city}" required maxlength="25">
-      <label for="floatingInput">Cidade</label>
-    </div>
-    <div class="checkbox mb-3">
-    </div>
-
-    <div class="form-floating">
-      <select class="form-control" id="role" th:field="*{role}" required>
-        <option value="">Selecione</option>
-        <option value="adm">Adm</option>
-        <option value="tec">Tecnico</option>
-      </select>
-      <label for="role">Role</label>
-    </div>
-    <div class="checkbox mb-3">
-    </div>
-
-    <div class="form-floating">
-      <input type="password" class="form-control" id="floatingPassword" th:field="*{password}" required maxlength="15">
-      <label for="floatingPassword">Sua Senha</label>
-    </div>
-
-    <div class="form-floating">
-      <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" required maxlength="15">
-      <label for="confirmPassword">Confirme Sua Senha</label>
-    </div>
+      <div class="form-floating">
+        <input type="text" class="form-control" id="floatingInput" th:field="*{city}" required maxlength="25">
+        <label for="floatingInput">Cidade</label>
+      </div>
+      <div class="checkbox mb-3">
+      </div>
 
 
+      <div class="form-floating">
+        <select class="form-control" id="role" th:field="*{role}" required>
+          <option value="">Selecione</option>
+          <option value="adm">Adm</option>
+          <option value="tec">Tecnico</option>
+        </select>
+        <label for="role">Role</label>
+      </div>
+      <div class="checkbox mb-3">
+      </div>
 
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Registrar</button>
-    
-  </form>
-</main>
+
+      <div class="form-floating">
+        <input type="password" class="form-control" id="floatingPassword" th:field="*{password}" required
+          maxlength="15">
+        <label for="floatingPassword">Sua Senha</label>
+      </div>
+      <div class="checkbox mb-3">
+      </div>
+
+      <div class="form-floating">
+        <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" required maxlength="15">
+        <label for="confirmPassword">Confirme Sua Senha</label>
+      </div>
+      <div class="checkbox mb-3">
+      </div>
+
+
+
+      <button class="w-100 btn btn-lg btn-primary" type="submit">Registrar</button>
+
+    </form>
+  </main>
 
   <script>
     document.getElementById('confirmPassword').addEventListener('input', function () {
-        var password = document.getElementById('floatingPassword').value;
-        var confirmPassword = this.value;
+      var password = document.getElementById('floatingPassword').value;
+      var confirmPassword = this.value;
 
-        if (password !== confirmPassword) {
-            this.setCustomValidity('As senhas não coincidem.');
-        } else {
-            this.setCustomValidity('');
-        }
+      if (password !== confirmPassword) {
+        this.setCustomValidity('As senhas não coincidem.');
+      } else {
+        this.setCustomValidity('');
+      }
     });
   </script>
-    
-  </body>
+
+</body>
+
 </html>
