--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="pr-BR">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <title>Registrado</title>
+    <title>Lista de usuarios</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -15,7 +15,7 @@
   <main class="form-signin">
 
    
-    <h1 class="h3 mb-3 fw-normal">Lista de Usuarios</h1>
+    <h1 class="h3 mb-3 fw-normal">Usuarios Cadastrados</h1>
 
     <div class="form-floating">
      
@@ -24,38 +24,35 @@
     </div>
     <div class="form-floating">
     
-    <table class="table table-striped table-bordered">
+        <table class="table table-striped table-bordered">
     
-    <thead class="thead-dark">
-    <tr>
-    <th>ID USER</th>
-    <th>E-mail</th>
-    <th>Nome Completo</th>
-    <th>Endereco</th>
-      <th>Cidade</th>
-      <th>Role</th>
-    </tr>
-    </thead>
-    
-    <tbody>
-    
-    </tbody>
-    <tr th:each="user: ${listUsers}">
-    <td th:text="${user.id}"></td>
-    <td th:text="${user.email}"></td>
-    <td th:text="${user.name}"></td>
-    <td th:text="${user.endereco}"></td>
-      <td th:text="${user.city}"></td>
-      <td th:text="${user.role}"></td>
-    </tr>
-    </table>
+            <thead class="thead-dark">
+            <tr>
+            <th>ID USER</th>
+            <th>E-mail</th>
+            <th>Nome Completo</th>
+            <th>Endereco</th>
+              <th>Cidade</th>
+              <th>Role</th>
+            </tr>
+            </thead>
+            
+            <tbody>
+            
+            </tbody>
+            <tr th:each="user: ${listUsers}">
+            <td th:text="${user.id}"></td>
+            <td th:text="${user.email}"></td>
+            <td th:text="${user.name}"></td>
+            <td th:text="${user.endereco}"></td>
+              <td th:text="${user.city}"></td>
+              <td th:text="${user.role}"></td>
+            </tr>
+            </table>
     
      
     </div>
 
-</main>
-
-
-    
+   </main>
   </body>
 </html>
