--- a/src/main/resources/templates/incidentes.html
+++ b/src/main/resources/templates/incidentes.html
@@ -6,20 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <title>Abertura Incidente</title>
-
-
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-
-  <link href="css/signin.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 
 <body class="text-center">
 
   <main class="form-signin">
     <form th:action="@{/processa_incidente}" method="post" th:object="${orders}">
-
-      <h1 class="h3 mb-3 fw-normal">Registra Incidente.</h1>
-
+      <div class="d-flex justify-content-start align-items-center">
+        <a th:href="@{/welcome}" class="btn btn-outline-secondary">Home</a>
+        <a th:href="@{/logout}" class="btn btn-outline-secondary">Sair</a>
+        <h1 class="h3 mb-3 fw-normal mx-auto">Registro de Incidentes</h1>
+        <div></div>
+      </div>
       <div class="form-floating">
         <input type="text" class="form-control" id="floatingInput" th:field="*{cliente}" required maxlength="35">
         <label for="floatingInput">Nome do Cliente:</label>
