--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -52,8 +52,11 @@
             background-color: #0056b3;
         }
     </style>
+
 </head>
 <body>
+
+<main>
     <div class="container">
         <div class="logo"></div>
         <h2>Seja bem-vindo!</h2>
@@ -61,5 +64,6 @@
         <a th:href="@{/login}" class="btn">Login</a>
         <a th:href="@{/register}" class="btn">Cadastro</a>
     </div>
+</main>
 </body>
 </html>
