--- a/src/main/resources/templates/orderlist.html
+++ b/src/main/resources/templates/orderlist.html
@@ -1,64 +1,53 @@
-<!doctype html>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="pr-BR">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <title>Lista de Incidentes</title>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <title>Lista de Incidentes</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+</head>
+<body class="text-center">
+<main class="form-signin">
+  <div class="d-flex justify-content-start align-items-center">
+    <a th:href="@{/welcome}" class="btn btn-outline-secondary">Home</a>
+    <a th:href="@{/logout}" class="btn btn-outline-secondary">Sair</a>
+    <h1 class="h3 mb-3 fw-normal mx-auto">Lista de Incidentes</h1>
+    <div></div>
+  </div>
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <link href="css/signin.css" rel="stylesheet">
-  </head>
-  <body class="text-center">
-    
-  <main class="form-signin">
-
-   
-    <h1 class="h3 mb-3 fw-normal">Lista de Incidentes</h1>
-
-    <div class="form-floating">
-     
-    </div>
-    <div class="checkbox mb-3">
-    </div>
-    <div class="form-floating">
-    
+  <div class="form-floating">
+    <div class="checkbox mb-3"></div>
     <table class="table table-striped table-bordered">
-    
-    <thead class="thead-dark">
-    <tr>
-    <th>Numero do chamado</th>
-    <th>Nome do Cliente</th>
-    <th>Equipamento</th>
-    <th>Tecnico</th>
-    <th>Endereco</th>
-      <th>Status</th>
-      <th>Defeito</th>
-    </tr>
-    </thead>
-    
-    <tbody>
-    
-    </tbody>
+      <thead class="thead-dark">
+      <tr>
+        <th>Numero do chamado</th>
+        <th>Nome do Cliente</th>
+        <th>Equipamento</th>
+        <th>Tecnico</th>
+        <th>Endereco</th>
+        <th>Status</th>
+        <th>Defeito</th>
+      </tr>
+      </thead>
+      <tbody>
       <tr th:each="order: ${listOrder}">
         <td>
           <a th:href="'/listcall/' + ${order.id}">
-            CALL<span th:text="${order.id}"></span>
+            INC100<span th:text="${order.id}"></span>
           </a>
         </td>
-      <td th:text="${order.cliente}"></td>
-      <td th:text="${order.equipamento}"></td>
-      <td th:text="${order.tecnico}"></td>
-      <td th:text="${order.endereco}"></td>
-      <td th:text="${order.status}"></td>
-      <td th:text="${order.defeito}"></td>
-    </tr>
+        <td th:text="${order.cliente}"></td>
+        <td th:text="${order.equipamento}"></td>
+        <td th:text="${order.tecnico}"></td>
+        <td th:text="${order.endereco}"></td>
+        <td th:text="${order.status}"></td>
+        <td th:text="${order.defeito}"></td>
+      </tr>
+      </tbody>
     </table>
-    
-     
-    </div>
-
-   </main>
-  </body>
+  </div>
+</main>
+</body>
 </html>
