--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="pr-BR">
 
 <head>
@@ -6,19 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <title>Seus Dados</title>
-
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-
-  <link href="css/signin.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 
 <body class="text-center">
 
   <main class="form-signin">
     <form th:action="@{/processa_registro}" method="post" th:object="${user}">
-
-      <h1 class="h3 mb-3 fw-normal">Register</h1>
-
+      <div class="d-flex justify-content-start align-items-center">
+        <a th:href="@{/welcome}" class="btn btn-outline-secondary">Home</a>
+        <a th:href="@{/logout}" class="btn btn-outline-secondary">Sair</a>
+        <h1 class="h3 mb-3 fw-normal mx-auto">Registrar novo Usuario</h1>
+        <div></div>
+      </div>
       <div class="form-floating">
         <input type="email" class="form-control" id="floatingInput" th:field="*{email}" required maxlength="35">
         <label for="floatingInput">Seu Email</label>
