--- a/src/main/resources/templates/incidentes.html
+++ b/src/main/resources/templates/incidentes.html
@@ -118,9 +118,13 @@
         </select>
         <label for="tecnico">Técnico:</label>
       </div>
-      <div class="checkbox mb-3">
-      </div>
+      <div class="checkbox mb-3"></div>
 
+      <div class="form-floating">
+        <input type="file" class="form-control" id="photo" name="photo" accept="image/*">
+        <label for="photo">Enviar Foto:</label>
+      </div>
+      <div class="checkbox mb-3"></div>
 
       <button class="w-100 btn btn-lg btn-primary" type="submit">Registrar</button>
 
